--- a/.github/workflows/first_wf_file.yaml
+++ b/.github/workflows/first_wf_file.yaml
@@ -1,9 +1,10 @@
+---
 Name: Run shell commands in GitHub action
-on: [push]
-
+on:
+  - push
 jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      - name: echo a string
-      run: echo "Hello, this is from GitHub Actions workflow files"
+      - name: Echo a string
+        run: echo "Hello, this is from GitHub Actions workflow files"
