--- a/.github/workflows/first_wf_file.yaml
+++ b/.github/workflows/first_wf_file.yaml
@@ -6,5 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo a string
-        run: echo "Hello, this is from GitHub Actions workflow file"
-             cat /etc/os-release
+        run: |
+          echo "Hello, this is from GitHub Actions workflow file"
+          cat /etc/os-release
