--- a/.github/workflows/owap_zap_scan.yml
+++ b/.github/workflows/owap_zap_scan.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           ref: master
       - name: ZAP Scan
-        uses: zaproxy/action-api-scan@v0.1.1
+        uses: zaproxy/action-baseline@v0.7.0
         with:
           docker_name: 'owasp/zap2docker-stable'
           format: openapi
